k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llm-in-a-box
  labels:
    app.kubernetes.io/part-of: llm-in-a-box
